# version_git

./: CMakeLists.txt  readme.md  versionNumberToPackage.cmake.in  versionNumberToPackage.sh
